исправления после ревью